# rust-todo-app

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
server/: Cargo.toml
server/src/: main.rs
server/src/entity/: todo.rs
server/src/handlers/: todo.rs
server/src/migration/: m20240310_000001_create_todo_table.rs  mod.rs
target-buildcheck/: .rustc_info.json
ui/: Cargo.toml  index.html
ui/src/: api.rs  app.rs  lib.rs  main.rs
ui/src/pages/: home.rs  todo.rs
ui/style/: input.css
