[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
leptos = { version = "0.6.14", features = ["csr"] }
leptos_router = { version = "0.6.14", features = ["csr"] }
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
gloo-net = "0.3" # alternative to reqwest for wasm

[profile.release]
opt-level = 'z'   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction at the cost of compile time
panic = "abort"   # Remove panic unwinding machinery
strip = true      # Strip symbols from the binary
