[package]
name = "ui"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = "0.1"
leptos = "0.6.15"
leptos_axum = { version = "0.6.15", optional = true }
leptos_meta = "0.6.15"
leptos_router = "0.6.15"
serde = { version = "1.0", features = ["derive"] }
server_fn = "0.6.15"
wasm-bindgen = "0.2"
axum = { version = "0.7.5", default-features = false, optional = true }
sea-orm = { version = "1.1.0", default-features = false, features = ["macros", "runtime-tokio-rustls", "sqlx-postgres"], optional = true }

[features]
default = ["hydrate"]
hydrate = ["leptos/hydrate", "leptos_meta/hydrate", "leptos_router/hydrate"]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:sea-orm",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]
